<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Counters PRO</string>
    
    <string name="copy_counter_title">Options</string>
    <string name="copy_counter_name">New name</string>
    <string name="copy_counter_note">New discription</string>
    <string name="copy_counter_indications">Copy indications</string>
    
    <string name="save_before_copying">Save before copying</string>
    
    <string name="user_guide_link">http://thecounterspro.blogspot.com/2013/12/user-guide-content.html</string>
    
    <string name="delete_all_confirm">Delete all indications?</string>
    <string name="list_of_indications_is_empty">List of indications is empty</string>
    
    <string name="continue_action">Continue</string>
    <string name="cancel_action">Cancel</string>
        
    <string name="copy_to_choice_counter">Choose counters</string>
    <string name="copy_to_empty_destination">Before copying you must create another counter</string>
    <string name="copy_to_cant_be_completed">Copying can not be completed for &#8230;</string>
    <string name="copy_to_trouble">Copying aborted. Error accessing database</string>
    <string name="copy_to_canceled">Copying canceled</string>
    <string name="copy_to_ok">Copying completed successfully</string>
    
    <string name="export_form_title">Export</string>
    <string name="export_form_description">As a result, the indications list will be copied to the SD card in CSV file.\n\nContinue?</string>
    <string name="export_ok">Export completed successfully</string>
    <string name="export_trouble">Export aborted. Error accessing file</string>
    <string-array name="csv_export_fields">
        <item>Counter</item>
        <item>Date</item>
        <item>Total</item>
        <item>Value</item>
        <item>Tariff</item>        
        <item>Formula</item>
        <item>Cost</item>
        <item>Note</item>
    </string-array>
    
    <string name="indictation_group_type">Grouping by period</string>
    <string-array name="indication_groups">
        <item>Without</item>
        <item>Year</item>
        <item>Month</item>
        <item>Week</item>
        <item>Day</item>
        <item>Hour</item>
    </string-array>
        
    <string name="indication_group_total">Totals</string>
    <string name="indication_group_period_without">for all period</string>
    <string name="indication_group_period_year">for %1$d year</string>
    <string name="indication_group_period_month">for %1$s %2$d</string>
    <string name="indication_group_period_day">for %1$s</string>
    <string name="indication_group_period_hour">for %1$s</string>
        
    <string name="menu_more">More</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_restore">Restore</string> 
    <string name="menu_feedback">Send feedback</string>
    <string name="menu_save">Save</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_copy_to">Copy to &#8230;</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_user_guide">User guide</string>
    <string name="menu_delete">Delete</string>
    
    <string name="sdcard_not_available">SD card is not available</string>
    <string name="backup_ok">Backup completed successfully</string>
    <string name="backup_trouble">Backup aborted. Error accessing file</string>
    <string name="restore_ok">Restoring the database successfully completed</string>
    <string name="restore_trouble">Restoring interrupted. Error accessing file</string>
    
    <string name="action_result">Result</string>
    
    <string name="backup_form_title">Backup</string>
    <string name="backup_form_description">As a result, the database will be copied to the SD card.\n\nContinue?</string>
    <string name="create_backup">Create backup</string>
    
    <string name="restore_form_title">LIST OF BACKUPS</string>
    <string name="restore_form_empty">The list of backups is empty.</string>
    
    <string name="restore_dialog_title">Restore</string>
    <string name="restore_dialog_description"><b>Please note</b>, the operation can not be undone!\nAs a result, the database file will be replaced with the file backup.\n\nContinue?</string>
                    
    <string name="counters_list_empty">List is empty. Please add new counter.</string>
    <string name="entries_list_empty">List is empty. Please add new indication.</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
        
    <string name="color">Color</string>
    <string name="pick_the_color">Pick a color</string>
    
    <string name="action">Actions</string>
    <string name="action_counter_del_confirm">Delete counter?</string>    
    <string-array name="counter_actions">
        <item>Add new indication</item>
        <item>Copy counter</item>
        <item>Edit counter</item>
        <item>Delete counter</item>
    </string-array>
    
    <string name="action_entry_del_confirm">Delete indication?</string>
    
    <string name="entry_form_title">INDICATIONS</string>
    <string name="action_add_counter">Add</string>
    <string name="action_settings">Preferences</string>
    <string name="action_add_entry">Add</string>
    
    <string name="counters">COUNTERS</string>
    <string name="counters_edit_form_title_add">NEW COUNTER</string>
    <string name="counters_edit_form_title_edit">COUNTER</string>
    <string name="counters_edit_form_cnt_name">Title</string>
    <string name="counters_edit_form_cnt_note">Description</string>
    <string name="counters_edit_form_btn_ok">Save</string>
    <string name="counters_edit_form_btn_cancel">Cancel</string>
    
    <string name="error_evaluator_expression">wrong expression</string>
    
    <string name="measure">Unit of measure</string>
    <string name="rate">tariff</string>
    <string name="currency">USD</string>
    <string name="rate_currency">Currency of the tariff</string>
    <string name="formula">formula</string>
    <string name="formula_text">Text of formula</string>
    <string name="formula_example">(total-value)*tariff</string>
    <string name="formula_simple">value*tariff</string>
    
    <string-array name="formula_var_value_aliases">
        <item>v</item>
        <item>value</item>
        <item>значение</item>
        <item>знч</item>
    </string-array>
    
    <string-array name="formula_var_total_aliases">
        <item>t</item>
        <item>total</item>
        <item>итог</item>
        <item>итг</item>
    </string-array>
    
    <string-array name="formula_var_tariff_aliases">
        <item>trf</item>
        <item>tariff</item>
        <item>тариф</item>
        <item>трф</item>
    </string-array>
    
    <string name="rate_type">Type of tariff</string>
    <string-array name="rate_type_list">
        <item>Without</item>
        <item>Simple tariff</item>
        <item>Formula</item>
    </string-array>
    
    <string name="view_value_type">Type of view value in list</string>
    <string-array name="view_value_type_list">
        <item>Delta (value)</item>
        <item>Total value</item>
        <item>Cost</item>
        <item>Total cost</item>
    </string-array>
    
    <string name="entry_edit_form_title_add">NEW INDICATION</string>
    <string name="entry_edit_form_title_edit">INDICATION</string>
    <string name="entry_edit_form_label_last_value">Sum of previous values</string>
    <string name="entry_edit_form_label_value">Current value</string>
    
    <string name="entry_edit_form_label_value_type">Type of current value</string>
    <string-array name="value_type_list">
        <item>Relative</item>
        <item>Absolute</item>        
    </string-array>
    
    <string name="entry_edit_form_label_rate">Tariff</string>
    <string name="entry_edit_form_btn_ok">Save</string>
    
    <string name="entry_edit_form_label_note">Note</string>
    
    <string name="error_entry_value">Enter value</string>
    <string name="error_entry_rate">Enter tariff</string>
    <string name="error_entry_datetime">At the specified time has already been registered value</string>
        
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string-array name="month_list">
        <item>January</item>
        <item>February</item>
        <item>Mar</item>
        <item>Aprel</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    
    <string name="entry_period_type">Period of values registration</string>
    <string name="year">year</string>
    <string-array name="period_type_list">
        <item>Year</item>
        <item>Month</item>
        <item>Day</item>
        <item>Hour</item>
        <item>Minute</item>
    </string-array>
</resources>